fixed monor spacing issue

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -383,7 +383,7 @@ p {
 		padding:8px 0 2px 0;
 		text-decoration:none;
 		color:$navLinkColor;
-		text-indent:20px;
+		text-indent:10px;
 		cursor: pointer;
 	}
 	@-moz-document url-prefix() {
